README: manual instructions include ZGC settings